# design-copilot

./: .gitignore  bun.lockb  components.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.client.config.ts  webpack.config.js  worker.ts  worker1.ts
app/: globals.css  layout.tsx
app/(routes)/: layout.tsx
app/(routes)/(editor)/: layout.tsx
app/(routes)/(landing)/: layout.tsx  page.tsx
app/types/: fs.ts  nav.ts  unist.ts
components/: component-overlay.tsx  header.tsx  mouse-listener.tsx  sidebar.tsx  theme-customizer.tsx  theme-selector.tsx  theme-switcher.tsx  theme-wrapper.tsx  v0-container.tsx  wasm-demo.tsx  web-worker.tsx  xterm-terminal.tsx
components/cards/: demo-card.tsx
components/copilot/: copilot.tsx  design-copilot.tsx  langserve.tsx
components/dialogs/: action.ts  create-project.tsx
components/edit-boxes/: edit-box-small.tsx
components/menus/: right-menu.tsx
components/ui/: button.tsx  copy-button.tsx  sheet.tsx  sidebar-nav.tsx  style-switcher.tsx  theme-provider.tsx  wireframe.tsx
config/: docs.ts
lib/: events.ts  utils.ts
public/wasm/: demo.wasm  index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts
public/web_worker/: index.d.ts  index_bg.wasm  index_bg.wasm.d.ts  package.json  wasm_backend.d.ts  wasm_backend.js  wasm_backend_bg.js  wasm_backend_bg.wasm  wasm_backend_bg.wasm.d.ts  wasm_in_web_worker.js  wasm_in_web_worker_bg.js  wasm_in_web_worker_bg.wasm
store/: store.ts
styles/: globals.css  mdx.css
wasm_backend/: Cargo.toml  build.sh
wasm_backend/src/: lib.rs
(+15 files in other folders)
